# debateos-search

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.tauri/: signing.key.pub
scripts/: generate-github-release-manifest.mjs  import-pdf-sources.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: crawler.rs  mod.rs  settings.rs
src/components/: CategoryTabs.tsx  CredibilityBadge.tsx  LoadingSkeletons.tsx  RankDetails.tsx  RelatedSection.tsx  ResearchModeToggle.tsx  ResultCard.tsx  SearchBar.tsx  SourceBadge.tsx  UpdatesSection.tsx  VerticalTabs.tsx
src/crawler/: crawler.ts  crawlerTransport.ts  extractPage.ts  index.ts  robots.ts  types.ts
src/hooks/: useSearch.ts  useSettings.ts  useUpdater.ts
src/local-index/: LocalIndexProvider.ts  index.ts  localIndex.ts  searchLocalIndex.ts  tokenizer.ts  types.ts
src/pages/: Home.tsx  Results.tsx  Settings.tsx  Sources.tsx  Viewer.tsx
src/providers/: ArxivProvider.ts  BraveImagesProvider.ts  BraveProvider.ts  CourtListenerProvider.ts  MockProvider.ts  NominatimProvider.ts  QuickDefinitionProvider.ts  WikipediaProvider.ts  http.ts  index.ts  providerErrors.ts  providerFactory.ts  providerStatus.ts  publicApiProviders.ts  types.ts
src/search-engine/: cache.ts  credibility.ts  freshness.ts  index.ts  mergeResults.ts  normalize.ts  ranking.ts  smartOverview.ts  types.ts
src/source-registry/: defaultSources.ts  index.ts  indexSource.ts  (+5 more)
(+10 files in other folders)
